--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
