--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
     "firebase": "^10.12.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
