--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
     "firebase": "^10.12.3",
