--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
+    "clipboard": "^2.0.11",
     "firebase": "^10.12.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
