--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
   },
