--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
     "clipboard": "^2.0.11",
+    "dayjs": "^1.11.12",
     "firebase": "^10.12.3",
+    "firebase-admin": "^12.3.1",
     "moment": "^2.30.1",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
