--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
