--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@ant-design/pro-components": "^2.7.10",
     "antd": "^5.19.1",
+    "apexcharts": "^3.54.0",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.3",
@@ -20,6 +21,7 @@
     "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.66.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
